[gd_scene load_steps=4 format=3 uid="uid://bs3ojqwei3msw"]

[ext_resource type="Script" uid="uid://ddtv40l1hhsxi" path="res://scenes/ui/cards/shop_item_card.gd" id="1_doqjy"]
[ext_resource type="Texture2D" uid="uid://bsp6bjlnhnn07" path="res://assets/shop-items/pigeon.png" id="2_52w2n"]
[ext_resource type="Texture2D" uid="uid://bb0mf72uwfgpg" path="res://assets/package.png" id="3_ss68i"]

[node name="ShopItemCard" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_doqjy")

[node name="ItemButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
size_flags_horizontal = 3
alignment = 0

[node name="MarginContainer" type="MarginContainer" parent="ItemButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="ItemButton/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="ItemButton/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="NameLabel" type="Label" parent="ItemButton/MarginContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Carrier Pigeon"
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ItemButton/MarginContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="ItemButton/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_ss68i")
expand_mode = 2

[node name="CostLabel" type="Label" parent="ItemButton/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "100,000,000,000"

[node name="VBoxContainer2" type="VBoxContainer" parent="ItemButton/MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ItemButton/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
alignment = 2

[node name="ItemTexture" type="TextureRect" parent="ItemButton/MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("2_52w2n")

[node name="CountLabel" type="Label" parent="ItemButton/MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 6
theme_override_font_sizes/font_size = 16
text = "x1212"
